@@ -76,6 +76,8 @@ Version 0.7.5 UNRELEASED
 
   * Return an error if adding/removing tags without "root" (Closes: #725272)
 
+  * Format string '%t' tells about locally installed packages (Closes: #349413)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
